force-app/main/default/objects/Supplier__c/fields/Brand_Inverter__c.field-meta.xml
<CustomField>
    <fullName>Brand_Inverter__c</fullName>
    <label>Brand Inverter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>