force-app/main/default/objects/Supplier__c/fields/Brand_Panel__c.field-meta.xml
<CustomField>
    <fullName>Brand_Panel__c</fullName>
    <label>Brand Panel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>