force-app/main/default/objects/Supplier__c/fields/Commitments_under_our_Referral_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Commitments_under_our_Referral_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commitments under our Referral Agreement</label>
    <type>Checkbox</type>
</CustomField>