force-app/main/default/objects/Supplier__c/fields/Confirmed_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Supplier</label>
    <type>Checkbox</type>
</CustomField>