force-app/main/default/objects/Supplier__c/fields/How_would_you_like_us_to_support_you__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_like_us_to_support_you__c</fullName>
    <label>How would you like us to support you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please contact the customer</fullName>
            </value>
            <value>
                <fullName>The customer will contact you</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>