force-app/main/default/objects/Supplier__c/fields/Key_Accreditations_Summary__c.field-meta.xml
<CustomField>
    <fullName>Key_Accreditations_Summary__c</fullName>
    <formula>Supplier_Contact__r.Account.Key_Accreditations_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Accreditations Summary</label>
    <type>Text</type>
</CustomField>