force-app/main/default/objects/Supplier__c/fields/Pass_Details_to_Parker_Lane__c.field-meta.xml
<CustomField>
    <fullName>Pass_Details_to_Parker_Lane__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Details to Parker Lane</label>
    <type>Checkbox</type>
</CustomField>