force-app/main/default/objects/Supplier__c/fields/Receive_Referrer_Updates__c.field-meta.xml
<CustomField>
    <fullName>Receive_Referrer_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Referrer Updates</label>
    <type>Checkbox</type>
</CustomField>