force-app/main/default/objects/Supplier__c/fields/Send_the_quote_to__c.field-meta.xml
<CustomField>
    <fullName>Send_the_quote_to__c</fullName>
    <label>Send the quote to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Me and my customer</fullName>
            </value>
            <value>
                <fullName>Me only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>