force-app/main/default/objects/Supplier__c/fields/Supplier_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Mobile__c</fullName>
    <formula>Supplier_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Contact Mobile</label>
    <type>Text</type>
</CustomField>