force-app/main/default/objects/Supplier__c/fields/Supplier_Installer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Installer_Phone__c</fullName>
    <formula>Supplier_Contact__r.Phone</formula>
    <label>Supplier Installer Phone</label>
    <type>Text</type>
</CustomField>