force-app/main/default/objects/Supplier__c/fields/Unique_Value_Proposition_Summary__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value_Proposition_Summary__c</fullName>
    <formula>Supplier_Contact__r.Account.Unique_Value_Proposition_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Value Proposition Summary</label>
    <type>Text</type>
</CustomField>